Actualización final curso HTML parte 2

--- a/HTML5 y CSS3/Mi primera página web/productos.css
+++ b/HTML5 y CSS3/Mi primera página web/productos.css
@@ -65,3 +65,13 @@ nav a:hover{
     font-weight: bold;
     margin-top: 10px;
 }
+footer{
+    text-align: center;
+    background: url(/imagenes/bg.jpg);
+    padding: 40px;
+}
+.copyright{
+    margin: 20px;
+    color: #ffffff;
+    font-size: 13px;
+}
