--- a/HTML5 y CSS3/Mi primera página web/style.css
+++ b/HTML5 y CSS3/Mi primera página web/style.css
@@ -84,7 +84,7 @@ form{
     margin: 40px 0px;
 }
 
-form label, form p{
+form label, form legend{
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -97,4 +97,33 @@ form label, form p{
 }
 .checkbox{
     margin:20px 0px;
+}
+.enviar{
+    width: 40%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: orange;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+.enviar:hover{
+    background: darkorange;
+    transform: scale(1.05);
+}
+table{
+    margin: 40px 40px;
+    text-align: center;
+}
+thead{
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+td,th{
+    border: 1px solid #000000;
+    padding: 8px 15px;
 }
