--- a/HTML5 y CSS3/Mi primera página web/style.css
+++ b/HTML5 y CSS3/Mi primera página web/style.css
@@ -136,12 +136,23 @@ td,th{
 .banner{
     width: 100%;
 }
+
+.principal{
+    background: #fefefe;
+    padding: 3em 0;
+}
 .tituloPrincipal{
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
-    clear:left
+    clear:left;
+    color: rgba(0,0,0,1)
 }
+.tituloPrincipal:first-letter{
+    font-weight: bold;
+}
+
+
 .principal p{
     margin: 0 0 1em;
 }
@@ -158,15 +169,63 @@ td,th{
 }
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(#fefefe,#888888);
 }
 .mapa p{
     margin: 0 0 2em;
     text-align: center;
 }
+.mapaContenido{
+    width: 940px;
+    margin: 0 auto;
+}
+.diferenciales{
+    padding: 3em 0;
+    background: #888888;
+}
+.contenidoDiferenciales{
+    width: 640px;
+    margin: 0 auto;
+}
+.listaDiferenciales{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+
+}
+.items{
+    line-height: 1.5;
+}
+.items:before{
+    content: "✦";
+}
+.items:first-child{
+    font-weight: bold;
+}
 .imagenDiferenciales{
     width: 60%;
+    
+}
+.imagenDiferenciales:hover{
+    opacity: 30%;
+    transition: 400ms;
+    box-shadow: 10px 10px 30px 10px #000000;
 }
 .video{
     width: 560px;
     margin: 1em auto;
+}
+@media screen and (max-width:480px) {
+    h1{
+        text-align: center;
+    }
+    nav{
+        position: static;
+    }
+    .caja, .principal , .mapaContenido, .contenidoDiferenciales, .video{
+        width: auto;
+    }
+    .listaDiferenciales , .imagenDiferenciales{
+        width: 100%;
+    }
 }
